--- a/recipes/templates/recipes/search.html
+++ b/recipes/templates/recipes/search.html
@@ -207,7 +207,7 @@ Search Recipes
             </div>
             
             <div class="receipe-content">
-                <a href="recipe/{{ id }}">
+                <a href="/recipe/{{ id }}">
                     <h5>{{ title }}</h5>
                 </a>
                 <span>Servings: {{ serves }}</span>
