changed cache settings and fixed bg img

--- a/recipes/templates/recipes/search.html
+++ b/recipes/templates/recipes/search.html
@@ -8,7 +8,7 @@ Search Recipes
 
 {% block body %}
 <!-- ##### CTA Area Start ##### -->
-<section class="cta-area bg-img bg-overlay" style="background-image: url({% static 'img/bg-img/bg4.jpg' %});">
+<section class="cta-area bg-img bg-overlay search" style="background-image: url({% static 'img/bg-img/bg4.jpg' %});">
     <div class="container h-100">
         <div class="row h-100 align-items-center">
             <div class="col-12">
