--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -928,16 +928,21 @@ textarea:focus {
     z-index: 2;
     width: 100%;
     height: 110vh;
-    @media #{$breakpoint-lg} {
+    &.search {
+        @media #{$breakpoint-lg} {
         height: 125vh;
-    }
-    @media #{$breakpoint-md} {
-        height: 135vh;
-    }
-    @media #{$breakpoint-xs} {
-        height: 150vh;
+        }
+        @media #{$breakpoint-md} {
+            height: 135vh;
+        }
+        @media #{$breakpoint-xs} {
+            height: 150vh;
+        }
     }
     background-attachment: fixed;
+    @media (hover: none) {
+        background-attachment: initial;
+    }
     .cta-content {
         h2 {
             font-size: 72px;
